--- a/web/ui/shared/button.templ
+++ b/web/ui/shared/button.templ
@@ -85,7 +85,7 @@ templ PhantomLightButton(size string) {
 }
 
 func GetButtonClassesByTheme(theme string, size string) string {
-	classes := "flex w-full transition border items-center justify-center rounded"
+	classes := "flex w-full transition border items-center justify-center rounded cursor-pointer"
 
 	colors := ""
 	padding := ""
