--- a/web/ui/shared/icon.templ
+++ b/web/ui/shared/icon.templ
@@ -13,15 +13,15 @@ templ IconXs(name string) {
 }
 
 templ SpinningIcon(name string) {
-	<i data-feather={ name } class="animate-spin-slow"></i>
+	<i data-feather={ name } class="animate-spin"></i>
 }
 
 templ SpinningIconSm(name string) {
-	<i data-feather={ name } class="h-5 w-5 animate-spin-slow"></i>
+	<i data-feather={ name } class="h-5 w-5 animate-spin"></i>
 }
 
 templ SpinningIconXs(name string) {
-	<i data-feather={ name } class="h-4 w-4 animate-spin-slow"></i>
+	<i data-feather={ name } class="h-4 w-4 animate-spin"></i>
 }
 
 templ LoadingIcon() {
