--- a/web/ui/shared/operation.templ
+++ b/web/ui/shared/operation.templ
@@ -29,7 +29,7 @@ templ OperationStatus(o Operation) {
 			</div>
 			<span class="text-gray-600">Cancelada</span>
 		default:
-			<div class="animate-spin-slow text-sky-600">
+			<div class="animate-spin text-sky-600">
 				@Icon("loader")
 			</div>
 			<span>Em andamento...</span>
