--- a/web/ui/components/entities.templ
+++ b/web/ui/components/entities.templ
@@ -98,7 +98,7 @@ templ DeleteConfirmationDialog(e *models.Entity) {
 }
 
 templ SearchBar() {
-	<div class="group flex w-full rounded border bg-white focus-within:border-gray-400 sm:w-1/2 md:w-1/3 lg:w-1/4">
+	<div class="group flex w-full rounded border border-gray-200 bg-white focus-within:border-gray-400 sm:w-1/2 md:w-1/3 lg:w-1/4">
 		<div class="rounded-s bg-white p-2">
 			@shared.Icon("search")
 		</div>
