--- a/web/ui/shared/notification.templ
+++ b/web/ui/shared/notification.templ
@@ -30,7 +30,7 @@ templ NotificationCounter() {
 
 templ NotificationDialog() {
 	<dialog id="notification-dialog" class="rounded shadow shadow-gray-700">
-		<div class="sticky top-0 z-40 flex items-center justify-between border-b bg-gray-100 px-4 py-2">
+		<div class="sticky top-0 z-40 flex items-center justify-between border-b border-gray-200 bg-gray-100 px-4 py-2">
 			<h2 class="text-lg font-bold">Notificações</h2>
 			<div onclick="CloseNotificationDialog()">
 				@DefaultButtonOutline("xs") {
@@ -47,7 +47,7 @@ templ NotificationDialog() {
 			hx-swap="outerHTML"
 		>
 		</div>
-		<div class="sticky bottom-0 border-t bg-white p-2">
+		<div class="sticky bottom-0 border-t border-gray-200 bg-white p-2">
 			<div
 				hx-delete="/notifications"
 				hx-trigger="click"
