--- a/web/ui/components/metrics.templ
+++ b/web/ui/components/metrics.templ
@@ -48,17 +48,19 @@ templ MetricsCard(m *models.Metrics) {
 			<li class="md:truncate"><span class="font-medium">Desde:</span> { utils.FormatDateAsBR(m.StartDate) } </li>
 			<li class="md:truncate"><span class="font-medium">Até:</span> { utils.FormatDateAsBR(m.EndDate) } </li>
 		</ul>
-		<div class="grid grid-cols-6 gap-2 p-2 sm:absolute sm:bottom-2 sm:right-2 sm:grid-cols-2 sm:p-0">
-			<a
-				href={ templ.URL(fmt.Sprintf("/metrics/%d", m.ID)) }
-				title="Conferir resultado completo"
-				target="_blank"
-				hx-boost="true"
-			>
-				@shared.DefaultButtonOutline("xs") {
-					@shared.IconSm("external-link")
-				}
-			</a>
+		<div class={ getActionButtonsContainerMetricsCardClass(m) }>
+			if m.ReqStatus != "pending" {
+				<a
+					href={ templ.URL(fmt.Sprintf("/metrics/%d", m.ID)) }
+					title="Conferir resultado completo"
+					target="_blank"
+					hx-boost="true"
+				>
+					@shared.DefaultButtonOutline("xs") {
+						@shared.IconSm("external-link")
+					}
+				</a>
+			}
 			<div
 				hx-get={ fmt.Sprintf("/metrics/%d/form", m.ID) }
 				hx-target="#metrics-form"
@@ -349,4 +351,12 @@ func metricsResultChevronIconID(m *models.Metrics, resultType string) string {
 
 func metricsResultChevronIconTarget(m *models.Metrics, resultType string) string {
 	return fmt.Sprintf("#chevron-%s-%d", resultType, m.ID)
+}
+
+func getActionButtonsContainerMetricsCardClass(m *models.Metrics) string {
+	classes := "grid grid-cols-6 gap-2 p-2 sm:absolute sm:bottom-2 sm:right-2 sm:p-0"
+	if m.ReqStatus == "pending" {
+		return classes + " sm:grid-cols-1"
+	}
+	return classes + " sm:grid-cols-2"
 }
