--- a/web/ui/shared/button.templ
+++ b/web/ui/shared/button.templ
@@ -18,6 +18,12 @@ templ SubmitInfoButton(size string) {
 	}
 }
 
+templ SubmitWarningButton(size string) {
+	@Button("warning", size, templ.Attributes{"type": "submit"}) {
+		{ children... }
+	}
+}
+
 templ SubmitErrorButton(size string) {
 	@Button("error", size, templ.Attributes{"type": "submit"}) {
 		{ children... }
