--- a/web/ui/pages/invoices-cancel.templ
+++ b/web/ui/pages/invoices-cancel.templ
@@ -5,17 +5,17 @@ import "github.com/cayo-rodrigues/nff/web/models"
 import "github.com/cayo-rodrigues/nff/web/ui/forms"
 import "github.com/cayo-rodrigues/nff/web/ui/shared"
 
-templ InvoicesCancelingsPage(cancelingsByDate []map[string][]*models.InvoiceCancel, cancelingForForm *models.InvoiceCancel, entities []*models.Entity) {
+templ InvoicesCancelingsPage(cancelingsByDate []map[string][]*models.InvoiceCancel, cancelingForForm *models.InvoiceCancel, entities *models.EntitiesByType) {
 	<div class="flex flex-col gap-3">
 		<div class="flex flex-col gap-2">
-			@forms.CancelInvoiceForm(cancelingForForm, entities)
+			@forms.CancelInvoiceForm(cancelingForForm, entities.Senders)
 			@shared.ToggleElementVisibilityButton("#cancel-invoice-form")
 		</div>
 		<div class="flex flex-col gap-2 xl:mt-3 xl:flex-row xl:justify-between">
 			<h2 class="col-span-3 py-2 text-center text-base font-medium sm:py-3 md:py-0 md:text-left">Histórico de Operações (Cancelamentos)</h2>
 			<div class="grid grid-cols-1 gap-2 lg:grid-cols-7 lg:gap-6 xl:w-3/4 2xl:w-3/5">
 				@shared.FiltersByDate("#canceling-list", "/invoices/cancel/list")
-				@shared.FiltersByEntity("#canceling-list", "/invoices/cancel/list", entities)
+				@shared.FiltersByEntity("#canceling-list", "/invoices/cancel/list", entities.All)
 			</div>
 		</div>
 		@components.InvoicesCancelingsList(cancelingsByDate)
